# rosalind-cli

./: CHANGELOG.md  Cargo.toml  README.md
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: main.rs
